Fixed IE7 GridField "add row" alignment issue
Regression from Paul's last commit

--- a/scss/GridField.scss
+++ b/scss/GridField.scss
@@ -109,15 +109,16 @@ $gf_grid_x:	16px;
 		}
 		.add-existing-autocompleter {
 			span {															
-				display: inline-block;
+				@include inline-block(top);
 			}
 			input.relation-search {
 				width: 270px;
+				margin-bottom: $gf_grid_y;
 			}
 		}
 		.grid-csv-button, .grid-print-button {
 			margin-bottom: $gf_grid_y;
-			display: inline-block;
+			@include inline-block();
 		}
 	}
 	table.ss-gridfield-table {
